Fixed app-page-header not hiding (it wasn't visible but was on screen)

--- a/css/style.css
+++ b/css/style.css
@@ -603,7 +603,6 @@ h5.bottom-subtitle-bar {
 .app-page-header {
     position: fixed;
     top: 0;
-    left: 0;
     width: 100%;
     height: 3em;
     display: flex;
